<?xml version="1.0" encoding="utf-8"?>
<philoats.celerysplit.views.SwipeableItem
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/midnight_grey">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/relLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/relLayout"
        android:background="@color/toolbar"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/layered_item_edit"
            android:id="@+id/editButton"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:textSize="15sp"
            android:gravity="center|center_vertical"
            android:layout_toLeftOf="@+id/deleteButton"
            android:textColor="@color/pastel_green"
            android:background="@color/toolbar"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"/>

        <TextView
            android:text="@string/layered_item_delete"
            android:id="@+id/deleteButton"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:textSize="15sp"
            android:gravity="center|center_vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/pastel_red"
            android:background="@color/toolbar"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"/>

    </RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/relLayout"
    android:background="@color/midnight_grey">

        <TextView
            android:text="@string/layered_item_left_default"
            android:id="@+id/textLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textSize="18sp"
            android:gravity="left|center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</philoats.celerysplit.views.SwipeableItem>