<philoats.celerysplit.views.TimerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="philoats.celerysplit.fragments.TimerFragment"
    android:id="@+id/rl">

    <android.support.v7.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:id="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/toolbar">

        <Spinner
            android:id="@+id/compareSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:gravity="right"/>

    </android.support.v7.widget.Toolbar>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/splitList"
        android:gravity="center"
        android:background="@color/midnight_grey"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/timerTextView"
        android:clipToPadding="false"
        android:visibility="gone"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/timerTextView"
        android:enabled="false"
        android:id="@+id/timerSplit"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/drop_shadow_height"
        android:layout_below="@id/toolbar"
        android:background="@drawable/gradient_top"
        android:id="@+id/toolbar_shadow"/>

    <include layout="@layout/list_item_dual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastSplit"
        android:layout_alignBottom="@id/splitList"
        android:background="@color/toolbar"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignTop="@+id/lastSplit"
        android:background="@color/tab_indicator"
        android:id="@+id/listBottom"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/screen_timer_default_time"
        android:textColor="#FFCCCCDD"
        android:id="@+id/timerTextView"
        android:textSize="60sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/timerStopButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_timer_start"
        android:id="@+id/timerStartButton"
        android:background="#00ffffff"
        android:layout_alignBaseline="@+id/timerStopButton"
        android:layout_alignBottom="@+id/timerStopButton"
        android:layout_toLeftOf="@+id/timerUnsplitButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_timer_unsplit"
        android:id="@+id/timerUnsplitButton"
        android:background="#00ffffff"
        android:enabled="false"
        android:layout_gravity="bottom"
        android:layout_above="@+id/space2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:text="@string/screen_timer_reset"
        android:id="@+id/timerStopButton"
        android:background="#00ffffff"
        android:layout_alignTop="@+id/timerUnsplitButton"
        android:layout_toRightOf="@+id/timerUnsplitButton"
        android:layout_alignRight="@+id/space2"
        android:layout_alignEnd="@+id/space2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:id="@+id/space2"
        android:layout_above="@+id/graph"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <philoats.celerygraph.GraphView
        android:id="@+id/graph"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/space3"
        android:layout_toLeftOf="@+id/space4"
        android:background="@color/midnight_grey"
        android:visibility="gone"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:id="@+id/space3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"/>

    <Space
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/space4"
        android:layout_alignParentRight="true"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"/>

</philoats.celerysplit.views.TimerView>